--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,10 @@
 	<classpathentry kind="lib" path="lib/matrix_setup.jar"/>
 	<classpathentry kind="lib" path="lib/toxiclibscore.jar"/>
 	<classpathentry kind="lib" path="lib/gifAnimation.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-async-3.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-core-3.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-examples-3.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-media-support-3.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-stream-3.0.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
