--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,7 @@
 	<classpathentry kind="lib" path="lib/twitter4j-examples-3.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/twitter4j-media-support-3.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/twitter4j-stream-3.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/jdiff.jar"/>
+	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
